@@ -1,3 +1,4 @@
+require 'erubis'
 require 'active_support/configurable'
 require 'active_support/descendants_tracker'
 require 'active_support/core_ext/module/anonymous'
@@ -18,6 +19,7 @@ module AbstractController
     include ActiveSupport::Configurable
     extend ActiveSupport::DescendantsTracker
 
+    undef_method :not_implemented
     class << self
       attr_reader :abstract
       alias_method :abstract?, :abstract
