@@ -3,8 +3,9 @@ require 'abstract_unit'
 module RenderImplicitAction
   class SimpleController < ::ApplicationController
     self.view_paths = [ActionView::FixtureResolver.new(
-      "render_implicit_action/simple/hello_world.html.erb" => "Hello world!",
-      "render_implicit_action/simple/hyphen-ated.html.erb" => "Hello hyphen-ated!"
+      "render_implicit_action/simple/hello_world.html.erb"     => "Hello world!",
+      "render_implicit_action/simple/hyphen-ated.html.erb"     => "Hello hyphen-ated!",
+      "render_implicit_action/simple/not_implemented.html.erb" => "Not Implemented"
     )]
 
     def hello_world() end
@@ -25,9 +26,17 @@ module RenderImplicitAction
       assert_status 200
     end
 
+    test "render an action called not_implemented" do
+      get "/render_implicit_action/simple/not_implemented"
+
+      assert_body   "Not Implemented"
+      assert_status 200
+    end
+
     test "action_method? returns true for implicit actions" do
       assert SimpleController.new.action_method?(:hello_world)
       assert SimpleController.new.action_method?(:"hyphen-ated")
+      assert SimpleController.new.action_method?(:not_implemented)
     end
   end
 end
