@@ -1,5 +1,7 @@
 *Rails 3.1.0 (unreleased)*
 
+* Implicit actions named not_implemented can be rendered [Santiago Pastorino]
+
 * Wildcard route will always matching the optional format segment by default. For example if you have this route:
 
     map '*pages' => 'pages#show'
